# agent-stock

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
doc/: README.md
src/agent_stock/: __init__.py  agent.py  config.py  context.py  main.py  schemas.py
src/agent_stock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_stock/tools/: __init__.py  account_tools.py  analysis_tools.py  news_tools.py  stock_tools.py
