[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-stock"
version = "0.1.0"
description = "AI 智能助手服务 - Pydantic AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.2.0",
    "pydantic>=2.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "sse-starlette>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
